# Ironclad

./: .env.example  .gitignore  Makefile  README.md  README_Schedule.md  README_Tier1.md  SETUP.md  pyproject.toml  requirements.txt  sitecustomize.py  streamlit_app.py
.github/workflows/: ci.yml  nightly_smoke.yml  promote_and_smoke.yml  smoke.yml
config/: guardrails.yaml
infra/slash/: app.py  requirements.txt
pages/: 00_Health.py  01_Exposure.py  02_Snapshots.py  03_RunDiff.py
scripts/: dev_bootstrap.sh  ic.py  ironclad  record_run.py  sitecustomize.py
scripts/analytics/: data_quality_check.py  diff_runs.py  exposure_delta.py  exposure_export.py  guardrail_check.py  make_release_artifacts.py  odds_clv_audit.py  preslate.py  preslate_size.py  size_and_mark.py  size_picks.py  size_portfolio.py
scripts/closing_line_scrapers/: true_close.py
scripts/export/: to_sheets.py
scripts/guardrails/: checks.py  validate_challenger.py
scripts/ops/: backup_duckdb.py  check_secrets.py  promote_challenger.py
scripts/replay/: run_with_snapshots.py
scripts/schedules/: harvest_schedule.py  orchestrate_schedule_update.py
scripts/smoke/: post_promo_smoke.py
scripts/snapshots/: grab_inputs.py
src/ironclad/: __init__.py  logging.py  settings.py
src/ironclad/analytics/: __init__.py  data_quality.py  exposure_queries.py  (+1 more)
tests/: conftest.py
tests/golden/: test_preslate_golden.py
tests/integration/: test_config_doctor.py
tests/smoke/: test_demo_run.py
tests/unit/: test_data_quality.py  test_duckdb_sized.py  test_duckdb_store.py  test_guardrails.py  test_odds_math.py  test_pick_schema.py  test_run_context.py  test_runs_schema.py  test_sizer.py
(+30 files in other folders)
