
[project]
name = "ironclad"
version = "2.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pandas>=2.1",
  "numpy>=1.26",
  "duckdb>=1.0.0",
  "requests>=2.31",
  "click>=8.1",
  "streamlit>=1.36",
  "structlog>=24.1",
  "diskcache>=5.6.3",
  "python-dotenv>=1.0.1",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "responses>=0.25",
  "ruff>=0.5",
  "mypy>=1.10",
  "black>=24.8",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.ruff]
select = ["E","F","I","UP"]
line-length = 100
src = ["src"]
[tool.mypy]
python_version = "3.11"
strict = false
[tool.black]
line-length = 100
target-version = ["py311"]
